# MKT-HomeWork

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: data_process.py
service/: __init__.py  check_tag.py  compare_models.py  insta_food.py  predict.py  sentiment_analysis.py  sentiment_analysis_test.py
service/chart/: __init__.py  compare_models.py
service/model/: predict.py  sentiment_analysis.py
