[tool.poetry]
name = "mkt"
version = "0.1.0"
description = ""
authors = ["Hung-Cheng-Xi <11146062@ntub.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
transformers = "^4.47.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
aiofiles = "^24.1.0"
orjson = "^3.10.12"
accelerate = "^1.2.0"
torchaudio = "^2.5.1"
scikit-learn = "^1.6.0"
pathlib = "^1.0.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"

[tool.black]
line-length = 79
target-version = ['py312']


[tool.isort]
profile = "black"
line_length = 79
known_third_party = ["requests", "sqlalchemy"]
known_first_party = ["app"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
